// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NumberInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-4[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-4[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-4:not([aria-disabled='true']) .emotion-12:hover,
.emotion-4:not([aria-disabled='true']) .emotion-12:focus {
  border: 1px solid #792dd4;
}

.emotion-4:not([aria-disabled='true']) .emotion-12:focus-within {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border: 1px solid #792dd4;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  color: #d8c5fc;
  margin: 0 0.5rem;
  width: 32px;
  height: 32px;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  vertical-align: middle;
  fill: #d8c5fc;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-9 .fillStroke {
  stroke: #d8c5fc;
  fill: none;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  max-width: 100%;
}

.emotion-13 {
  color: #3f4250;
  background-color: transparent;
  font-size: 1rem;
  border: none;
  outline: none;
  position: relative;
  margin-right: 0.25rem;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.emotion-13::-webkit-outer-spin-button,
.emotion-13::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.emotion-13::-webkit-input-placeholder {
  color: #727683;
}

.emotion-13::-moz-placeholder {
  color: #727683;
}

.emotion-13:-ms-input-placeholder {
  color: #727683;
}

.emotion-13::placeholder {
  color: #727683;
}

.emotion-13[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.emotion-15 {
  color: #3f4250;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 0.5rem;
}

.emotion-18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  margin: 0 0.5rem;
  width: 32px;
  height: 32px;
}

.emotion-18:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-18:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-18:hover,
.emotion-18:active {
  background: #e5dbfd;
  color: #521094;
}

.emotion-20 {
  vertical-align: middle;
  fill: #641cb3;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-20 .fillStroke {
  stroke: #641cb3;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-1"
        >
          <div
            aria-disabled="false"
            class="emotion-4 emotion-5"
            data-error="false"
          >
            <button
              aria-label="Minus"
              class="emotion-6 emotion-7 emotion-8"
              disabled=""
              type="button"
            >
              <svg
                class="emotion-9 emotion-10"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M4 9.75A.75.75 0 0 1 4.75 9h10.5a.75.75 0 0 1 0 1.5H4.75A.75.75 0 0 1 4 9.75"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
            <div
              aria-live="assertive"
              class="emotion-11 emotion-12"
              role="status"
            >
              <input
                aria-label="Number Input"
                class="emotion-13 emotion-14"
                id="«r0»"
                name="test"
                style="width: 16px;"
                type="number"
                value="0"
              />
              <span
                class="emotion-15 emotion-16"
              />
            </div>
            <button
              aria-label="Plus"
              class="emotion-6 emotion-18 emotion-8"
              type="button"
            >
              <svg
                class="emotion-20 emotion-10"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`NumberInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-4[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-4[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-4:not([aria-disabled='true']) .emotion-12:hover,
.emotion-4:not([aria-disabled='true']) .emotion-12:focus {
  border: 1px solid #792dd4;
}

.emotion-4:not([aria-disabled='true']) .emotion-12:focus-within {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border: 1px solid #792dd4;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  color: #d8c5fc;
  margin: 0 0.5rem;
  width: 32px;
  height: 32px;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  vertical-align: middle;
  fill: #d8c5fc;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-9 .fillStroke {
  stroke: #d8c5fc;
  fill: none;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  max-width: 100%;
}

.emotion-13 {
  color: #3f4250;
  background-color: transparent;
  font-size: 1rem;
  border: none;
  outline: none;
  position: relative;
  margin-right: 0.25rem;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.emotion-13::-webkit-outer-spin-button,
.emotion-13::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.emotion-13::-webkit-input-placeholder {
  color: #727683;
}

.emotion-13::-moz-placeholder {
  color: #727683;
}

.emotion-13:-ms-input-placeholder {
  color: #727683;
}

.emotion-13::placeholder {
  color: #727683;
}

.emotion-13[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.emotion-15 {
  color: #b5b7bd;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-1"
        >
          <div
            aria-disabled="true"
            class="emotion-4 emotion-5"
            data-error="false"
          >
            <button
              aria-label="Minus"
              class="emotion-6 emotion-7 emotion-8"
              disabled=""
              type="button"
            >
              <svg
                class="emotion-9 emotion-10"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M4 9.75A.75.75 0 0 1 4.75 9h10.5a.75.75 0 0 1 0 1.5H4.75A.75.75 0 0 1 4 9.75"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
            <div
              aria-live="assertive"
              class="emotion-11 emotion-12"
              role="status"
            >
              <input
                aria-label="Number Input"
                class="emotion-13 emotion-14"
                disabled=""
                id="«r5»"
                name="test"
                style="width: 32px;"
                type="number"
                value="10"
              />
              <span
                class="emotion-15 emotion-16"
              />
            </div>
            <button
              aria-label="Plus"
              class="emotion-6 emotion-7 emotion-8"
              disabled=""
              type="button"
            >
              <svg
                class="emotion-9 emotion-10"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`NumberInputField > should trigger event onMinCrossed & onMaxCrossed 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-4[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-4[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-4:not([aria-disabled='true']) .emotion-12:hover,
.emotion-4:not([aria-disabled='true']) .emotion-12:focus {
  border: 1px solid #792dd4;
}

.emotion-4:not([aria-disabled='true']) .emotion-12:focus-within {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border: 1px solid #792dd4;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  margin: 0 0.5rem;
  width: 32px;
  height: 32px;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-7:hover,
.emotion-7:active {
  background: #e5dbfd;
  color: #521094;
}

.emotion-9 {
  vertical-align: middle;
  fill: #641cb3;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-9 .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  max-width: 100%;
}

.emotion-13 {
  color: #3f4250;
  background-color: transparent;
  font-size: 1rem;
  border: none;
  outline: none;
  position: relative;
  margin-right: 0.25rem;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.emotion-13::-webkit-outer-spin-button,
.emotion-13::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.emotion-13::-webkit-input-placeholder {
  color: #727683;
}

.emotion-13::-moz-placeholder {
  color: #727683;
}

.emotion-13:-ms-input-placeholder {
  color: #727683;
}

.emotion-13::placeholder {
  color: #727683;
}

.emotion-13[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.emotion-15 {
  color: #3f4250;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 0.5rem;
}

.emotion-18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  color: #d8c5fc;
  margin: 0 0.5rem;
  width: 32px;
  height: 32px;
}

.emotion-18:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-20 {
  vertical-align: middle;
  fill: #d8c5fc;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-20 .fillStroke {
  stroke: #d8c5fc;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-1"
        >
          <div
            aria-disabled="false"
            class="emotion-4 emotion-5"
            data-error="false"
          >
            <button
              aria-label="Minus"
              class="emotion-6 emotion-7 emotion-8"
              type="button"
            >
              <svg
                class="emotion-9 emotion-10"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M4 9.75A.75.75 0 0 1 4.75 9h10.5a.75.75 0 0 1 0 1.5H4.75A.75.75 0 0 1 4 9.75"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
            <div
              aria-live="assertive"
              class="emotion-11 emotion-12"
              role="status"
            >
              <input
                aria-label="Number Input"
                class="emotion-13 emotion-14"
                id="«rf»"
                name="test"
                style="width: 32px;"
                type="number"
                value="20"
              />
              <span
                class="emotion-15 emotion-16"
              />
            </div>
            <button
              aria-label="Plus"
              class="emotion-6 emotion-18 emotion-8"
              disabled=""
              type="button"
            >
              <svg
                class="emotion-20 emotion-10"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`NumberInputField > should trigger events correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-4[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-4[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-4:not([aria-disabled='true']) .emotion-12:hover,
.emotion-4:not([aria-disabled='true']) .emotion-12:focus {
  border: 1px solid #792dd4;
}

.emotion-4:not([aria-disabled='true']) .emotion-12:focus-within {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border: 1px solid #792dd4;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  margin: 0 0.5rem;
  width: 32px;
  height: 32px;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-7:hover,
.emotion-7:active {
  background: #e5dbfd;
  color: #521094;
}

.emotion-9 {
  vertical-align: middle;
  fill: #641cb3;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-9 .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  max-width: 100%;
}

.emotion-13 {
  color: #3f4250;
  background-color: transparent;
  font-size: 1rem;
  border: none;
  outline: none;
  position: relative;
  margin-right: 0.25rem;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.emotion-13::-webkit-outer-spin-button,
.emotion-13::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.emotion-13::-webkit-input-placeholder {
  color: #727683;
}

.emotion-13::-moz-placeholder {
  color: #727683;
}

.emotion-13:-ms-input-placeholder {
  color: #727683;
}

.emotion-13::placeholder {
  color: #727683;
}

.emotion-13[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.emotion-15 {
  color: #3f4250;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-1"
        >
          <div
            aria-disabled="false"
            class="emotion-4 emotion-5"
            data-error="false"
          >
            <button
              aria-label="Minus"
              class="emotion-6 emotion-7 emotion-8"
              type="button"
            >
              <svg
                class="emotion-9 emotion-10"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M4 9.75A.75.75 0 0 1 4.75 9h10.5a.75.75 0 0 1 0 1.5H4.75A.75.75 0 0 1 4 9.75"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
            <div
              aria-live="assertive"
              class="emotion-11 emotion-12"
              role="status"
            >
              <input
                aria-label="Number Input"
                class="emotion-13 emotion-14"
                id="«ra»"
                name="test"
                style="width: 32px;"
                type="number"
                value="10"
              />
              <span
                class="emotion-15 emotion-16"
              />
            </div>
            <button
              aria-label="Plus"
              class="emotion-6 emotion-7 emotion-8"
              type="button"
            >
              <svg
                class="emotion-9 emotion-10"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
